--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "dotenv": "^6.2.0",
     "express-validator": "^5.2.0",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^4.13.17"
