--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "dotenv": "^6.2.0",
+    "cors": "^2.8.5",
     "express-validator": "^5.2.0",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^4.13.17"
