--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "dotenv": "^6.2.0",
     "cors": "^2.8.5",
+    "multer": "^1.4.1",
     "express-validator": "^5.2.0",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^4.13.17"
