--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
-    "dotenv": "^6.2.0",
     "cors": "^2.8.5",
-    "multer": "^1.4.1",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
     "express-validator": "^5.2.0",
     "jsonwebtoken": "^8.4.0",
-    "mongoose": "^4.13.17"
+    "moment": "^2.24.0",
+    "mongoose": "^4.13.17",
+    "multer": "^1.4.1"
   }
 }
